--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: front
+        working-directory: ng-toolkit
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
