--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -28,4 +28,5 @@ jobs:
         cache: 'npm'
         cache-dependency-path: front/package.json
 
-    - run: npm run:test
+    - run: npm run build --if-present
+    - run: npm test
