--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -28,5 +28,6 @@ jobs:
         cache: 'npm'
         cache-dependency-path: front/package.json
 
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm test
