--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -31,5 +31,5 @@ jobs:
         cache: 'npm'
         cache-dependency-path: front/package.json
 
-    - run: npm build
+    - run: npm run build
     - run: npm run test
