--- a/.github/workflows/Backend_coverage_report.yml
+++ b/.github/workflows/Backend_coverage_report.yml
@@ -1,3 +1,11 @@
+name: Java CI with Maven
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   test:
     runs-on: ubuntu-latest
