--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -48,3 +48,7 @@ jobs:
         coverage_report_title: 'Test coverage results'
         coverage_report_name: 'Test coverage results'
         github_token: ${{ secrets.GITHUB_TOKEN }}
+
+    # Publish Coverage Job Summary Optional
+    - name: Add Coverage Job Summary
+      run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
