--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -45,7 +45,7 @@ jobs:
       id: jacoco_reporter
       uses: PavanMudigonda/jacoco-reporter@v4.8
       with:
-        coverage_results_path: 'back/target/site/jacoco-report/test.xml'
+        coverage_results_path: './back/target/site/jacoco-report/test.xml'
         coverage_report_name: Coverage
         coverage_report_title: JaCoCo
         github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -53,6 +53,7 @@ jobs:
         minimum_coverage: 80
         fail_below_threshold: false
         publish_only_summary: false
+      
 
     - name: Publish test coverage results
       uses: PavanMudigonda/jacoco-reporter@v4.8
