--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -16,7 +16,8 @@ on:
 
 jobs:
   build:
-
+    permissions:
+      checks: write
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -69,3 +70,12 @@ jobs:
     # Publish Coverage Job Summary Optional
     - name: Add Coverage Job Summary
       run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
+
+    # uploads the coverage-report.md artifact  # Optional
+
+    - name: Upload Code Coverage Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+         name: code-coverage-report-markdown
+         path: */coverage-results.md 
+         retention-days: 1
