--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Publish test coverage results
       uses: PavanMudigonda/jacoco-reporter@v4.8
       with:
-        coverage_results_path: ../back/target/site/jacoco/jacoco.xml
+        coverage_results_path: 'back/target/site/jacoco/jacoco.xml'
         coverage_report_title: 'Test coverage results'
         coverage_report_name: 'Test coverage results'
         github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -55,7 +55,7 @@ jobs:
       id: jacoco_reporter
       uses: PavanMudigonda/jacoco-reporter@v4.8
       with:
-        coverage_results_path: ../back/target/site/jacoco/jacoco.xml
+        coverage_results_path: 'back/target/site/jacoco/jacoco.xml'
         coverage_report_name: Coverage
         coverage_report_title: JaCoCo
         github_token: ${{ secrets.GITHUB_TOKEN }}
