--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -69,7 +69,7 @@ jobs:
 
     # Publish Coverage Job Summary Optional
     - name: Add Coverage Job Summary
-      run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
+      run: echo "${{ jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
 
     # uploads the coverage-report.md artifact  # Optional
 
