--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -78,8 +78,8 @@ jobs:
 
     - name: Get the Coverage info
       run: |
-        echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
-        echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
+        echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}" >> $GITHUB_STEP_SUMMARY
+        echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}" >> $GITHUB_STEP_SUMMARY
 
     # Publish Coverage Job Summary Optional
     #- name: Add Coverage Job Summary
