--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -19,11 +19,6 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - run: |
-        export DISPLAY=:99
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-        mycommand 
-
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -34,4 +29,7 @@ jobs:
 
     - run: npm install
     - run: npm run build
-    - run: npm test
+    - run: |
+        export DISPLAY=:99
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+        npm test
