--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -31,9 +31,9 @@ jobs:
         cache-dependency-path: front/package.json
 
     - run: npm install
+    - run: npm i @angular/material
     - run: npm run build
     - run: |
         export DISPLAY=:99
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-        ng add @angular/material
         npm test
