--- a/.github/workflows/Test_Report.yml
+++ b/.github/workflows/Test_Report.yml
@@ -13,5 +13,6 @@ jobs:
       with:
         artifact: test-results            # artifact name
         name: Junit Tests                  # Name of the check run which will be created
-        path: 'back/target/site/jacoco/*.xml'                     # Path to test results (inside artifact .zip)
+        path: '*.xml'         # Path to test results (inside artifact .zip)
+        token: ${{ secrets.GITHUB_TOKEN }}                    
         reporter: java-junit              # Format of test results
