--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.exclusions= back
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources= back, front
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
