--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
 sonar.organization=kadavre1024
 
-sonar.exclusions= back
+sonar.exclusions= back/**
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=bobapp
