--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -36,4 +36,4 @@ jobs:
     - run: |
         export DISPLAY=:99
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-        npm test
+        npm test:coverage
