--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -37,3 +37,6 @@ jobs:
         export DISPLAY=:99
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
         npm test
+    - uses: romeovs/lcov-reporter-action@v0.2.16
+      with:
+        lcov-file: front/coverage/lcov.info
