--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -31,12 +31,11 @@ jobs:
         cache-dependency-path: front/package.json
 
     - run: npm install
-    - run: npm i @angular/material
     - run: npm run build
     - run: |
         export DISPLAY=:99
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-        npm test
+        npm test --watch=false --no-progress --browsers=ChromeHeadless --code-coverage
     - name: Coverage report
       id: report
       uses: eleboys/test-coverage-report-action@v1.0.2  
