--- a/back/pom.xml
+++ b/back/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>11</java.version>
 		<sonar.organization>kadavre1024</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>Kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,6 +41,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+          		<groupId>org.sonarsource.scanner.maven</groupId>
+          		<artifactId>sonar-maven-plugin</artifactId>
+          		<!-- see versions at https://search.maven.org/search?q=g:org.sonarsource.scanner.maven%20AND%20a:sonar-maven-plugin -->
+          		<version>3.10.0.2594</version>
+        	</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
