--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -47,6 +47,14 @@ jobs:
         title: '# :lobster: Coverage Report'
         pass-emoji: ':green_circle:'
         fail-emoji: ':red_circle:'
+    - uses: phoenix-actions/test-reporting@v8
+      id: test-report                     # Set ID reference for step
+      with:
+        artifact: test-results            # artifact name
+        name: Junit Tests                  # Name of the check run which will be created
+        path: '${{ github.workspace }}/back/target/site/jacoco/jacoco.xml'         # Path to test results (inside artifact .zip)
+        token: ${{ secrets.GITHUB_TOKEN }}                    
+        reporter: java-junit              # Format of test results
 
     #- name: Get the Coverage info
     #  run: |
