backend report with test_report

--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -32,32 +32,13 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build project
-      run: mvn clean package
+    - uses: actions/checkout@v2         # checkout the repo
+    - run: mvn clean package
       working-directory: back
-
-    - name: Jacoco Report to PR
-      id: jacoco
-      uses: madrapps/jacoco-report@v1.6.1
+      
+    - uses: actions/upload-artifact@v2  # upload test results
+      if: success() || failure()        # run this step even if previous step failed
       with:
-        paths: ${{ github.workspace }}/back/target/site/jacoco/jacoco.xml
-        token: ${{ secrets.GITHUB_TOKEN }}
-        min-coverage-overall: 0
-        min-coverage-changed-files: 0
-        title: '# :lobster: Coverage Report'
-        pass-emoji: ':green_circle:'
-        fail-emoji: ':red_circle:'
-    - uses: phoenix-actions/test-reporting@v8
-      id: test-report                     # Set ID reference for step
-      with:
-        artifact: test-results            # artifact name
-        name: Junit Tests                  # Name of the check run which will be created
-        path: '${{ github.workspace }}/back/target/site/jacoco/jacoco.xml'         # Path to test results (inside artifact .zip)
-        token: ${{ secrets.GITHUB_TOKEN }}                    
-        reporter: java-junit              # Format of test results
-
-    #- name: Get the Coverage info
-    #  run: |
-    #    echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}" >> $GITHUB_STEP_SUMMARY
-    #    echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}" >> $GITHUB_STEP_SUMMARY
+        name: test-results
+        path: ${{ github.workspace }}/back/target/site/jacoco/jacoco.xml
     
