--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --code-coverage"
+    "test": "mocha --reporter json --reporter-option output=filename.json"
   },
   "private": true,
   "dependencies": {
