--- a/.github/workflows/tests-report.yml
+++ b/.github/workflows/tests-report.yml
@@ -14,4 +14,4 @@ jobs:
         artifact: test-results            # artifact name
         name: JUnit Tests                  # Name of the check run which will be created
         path: 'jacoco.xml'                     # Path to test results (inside artifact .zip)
-        reporter: java-junit              # Format of test results
+        reporter: jest-junit              # Format of test results
