--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -30,16 +30,9 @@ jobs:
         cache: 'npm'
         cache-dependency-path: front/package.json
 
-    - run: npm install
-    - run: npm run build
-    - run: |
-        export DISPLAY=:99
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-        npm test --watch=false --no-progress --browsers=ChromeHeadless --code-coverage
-    - name: Codecov
-      id: codecov
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    - run: npm ci
+    - run: npm build
+    - run: npm test --watch=false --browsers=ChromeHeadless --code-coverage --reporters=mocha
+    
     
     
