--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -33,6 +33,12 @@ jobs:
     - run: npm ci
     - run: npm build
     - run: npm test --watch=false --browsers=ChromeHeadless --code-coverage
+
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: code-coverage-report
+        path: ${{ github.workspace }}/front/coverage/bobapp
   
     
     
