--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: code-coverage-report
-        path: ${{ github.workspace }}/front/coverage/bobapp
+        path: ${{ github.workspace }}/front/coverage/bobapp/**
   
     
     
