--- a/back/sonar-project.properties
+++ b/back/sonar-project.properties
@@ -1,15 +1,13 @@
 sonar.projectKey=Kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
 sonar.organization=kadavre1024
 
-sonar.exclusions= back/**
-
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=bobapp
 #sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources= front
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
