--- a/back/sonar-project.properties
+++ b/back/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.organization=kadavre1024
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+sonar.qualitygate.wait=true
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
