--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -13,6 +13,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    types: [opened, synchronize, reopened]
 
 jobs:
   build:
