Add types on pull-request

--- a/.github/workflows/Docker_creation.yml
+++ b/.github/workflows/Docker_creation.yml
@@ -2,8 +2,10 @@ name: ci-docker
 
 on:
   push:
-    branches:
-      - "main"
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+    types: [opened, synchronize, reopened]
 
 jobs:
   back-end:
