--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     branches: [ "main" ]
     types: [opened, synchronize, reopened]
+permissions:
+  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
 jobs:
   sonarcloud:
     name: SonarCloud front scan
