--- a/back/sonar-project.properties
+++ b/back/sonar-project.properties
@@ -2,13 +2,16 @@ sonar.projectKey=kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demar
 sonar.organization=kadavre1024
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=bobapp
-#sonar.projectVersion=1.0
+sonar.projectName=bobapp
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+sonar.sources=./src
 sonar.qualitygate.wait=true
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+sonar.java.binaries=./target/classes
+sonar.test=./src
+sonar.project.monorepo.enabled=true
