--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demar
 sonar.organization=kadavre1024
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=bobapp
-#sonar.projectVersion=1.0
+sonar.projectName=bobapp
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
@@ -11,4 +11,8 @@ sonar.sources=.
 sonar.qualitygate.wait=true
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+sonar.test.sources=./src/app
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
+sonar.javascript.lcov.reportPaths=./coverage/bobapp/lcov.info
+sonar.project.monorepo.enabled=true
