--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -1,12 +1,12 @@
 name: SonarCloud
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-    types: [opened, synchronize, reopened]
-permissions:
-  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
+#on:
+#  push:
+#    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
+#    types: [opened, synchronize, reopened]
+#permissions:
+#  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
 jobs:
   sonarcloud:
     name: SonarCloud front scan
