--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -40,6 +40,22 @@ jobs:
       with:
         name: code-coverage-report
         path: ${{ github.workspace }}/front/coverage/bobapp/**
+        
+  sonarcloud:
+    name: SonarCloud front scan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: ./front/
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   
     
     
