--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -68,7 +68,7 @@ jobs:
         name: code-coverage-report-markdown
         path: "*/coverage-results.md"
         retention-days: 1
-        
+
   sonarcloud:
     name: SonarCloud back scan
     runs-on: ubuntu-latest
@@ -101,6 +101,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
+        run: mvn mvn -B -U -ntp verify verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=bobapp-back -f back/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
         working-directory: back
   
