sonarcloud monorepo modifications

--- a/back/sonar-project.properties
+++ b/back/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD-BackEnd
+sonar.projectKey=bobapp_back
 sonar.organization=kadavre1024
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=bobapp
+sonar.projectName=bobapp_back
 sonar.projectVersion=1.0
 
 
