--- a/back/pom.xml
+++ b/back/pom.xml
@@ -17,7 +17,8 @@
 		<java.version>11</java.version>
 		<sonar.organization>kadavre1024</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey>kadavre1024_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD</sonar.projectKey>
+		<sonar.projectKey>bobapp_back</sonar.projectKey>
+		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
 	</properties>
 	<dependencies>
 		<dependency>
