--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Back-end CI
 
 on:
   push:
@@ -70,6 +70,7 @@ jobs:
         retention-days: 1
 
   sonarcloud:
+    needs: build
     name: SonarCloud back scan
     runs-on: ubuntu-latest
     steps:
