--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Front-end CI
 
 on:
   push:
@@ -40,8 +40,9 @@ jobs:
       with:
         name: code-coverage-report
         path: ${{ github.workspace }}/front/coverage/bobapp/**
-        
+
   sonarcloud:
+    needs: build
     name: SonarCloud front scan
     runs-on: ubuntu-latest
     steps:
