--- a/.github/workflows/Docker_frontend.yml
+++ b/.github/workflows/Docker_frontend.yml
@@ -2,34 +2,11 @@ name: ci-docker
 
 on:
   workflow_run:
-    workflows: ["Back-end CI", "Front-end CI"]
+    workflows: ["Front-end CI"]
     types:
         - completed
 
 jobs:
-  back-end:
-    runs-on: ubuntu-latest
-    steps:
-        -
-          name: Checkout
-          uses: actions/checkout@v4
-        -
-          name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-        -
-          name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-        -
-          name: Build and push
-          uses: docker/build-push-action@v5
-          with:
-            context: ./back
-            file: ./back/Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/bobapp_back:latest
   front-end:
     runs-on: ubuntu-latest
     steps:
