--- a/back/pom.xml
+++ b/back/pom.xml
@@ -19,6 +19,9 @@
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>bobapp_back</sonar.projectKey>
 		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+		<sonar.coverage.jacoco.xmlReportPaths>
+    		../back/target/site/jacoco/jacoco.xml
+  		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
 		<dependency>
