--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -41,33 +41,7 @@ jobs:
       if: success() || failure()        # run this step even if previous step failed
       with:
         name: test-results
-        path: ${{ github.workspace }}/back/target/site/jacoco/jacoco.xml
-    
-    - name: JaCoCo Code Coverage Report
-      id: jacoco_reporter
-      uses: PavanMudigonda/jacoco-reporter@v4.8
-      with:
-        coverage_results_path: ${{ github.workspace }}/back/target/site/jacoco/jacoco.xml
-        coverage_report_name: Coverage
-        coverage_report_title: JaCoCo
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        skip_check_run: false
-        minimum_coverage: 80
-        fail_below_threshold: false
-        publish_only_summary: false
-    
-    # Publish Coverage Job Summary  # Optional
-    - name: Add Coverage Job Summary
-      run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
-        
-    # uploads the coverage-report.md artifact  # Optional
-
-    - name: Upload Code Coverage Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: code-coverage-report-markdown
-        path: "*/coverage-results.md"
-        retention-days: 1
+        path: ${{ github.workspace }}/back/target/site/jacoco
 
   sonarcloud:
     needs: build
@@ -82,7 +56,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
-          distribution: 'corretto' # Alternative distribution options are available.
+          distribution: 'tremurin' # Alternative distribution options are available.
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
