--- a/.github/workflows/back_tests.yml
+++ b/.github/workflows/back_tests.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
-          distribution: 'tremurin' # Alternative distribution options are available.
+          distribution: 'temurin' # Alternative distribution options are available.
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
