--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.sourceEncoding=UTF-8
 sonar.test.sources=./src/app
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
-sonar.project.monorepo.enabled=true
+#sonar.project.monorepo.enabled=true
