default working dir

--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -45,6 +45,9 @@ jobs:
     needs: build
     name: SonarCloud front scan
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: front
     steps:
       - uses: actions/checkout@v3
         with:
