--- a/.github/workflows/front_tests.yml
+++ b/.github/workflows/front_tests.yml
@@ -52,6 +52,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - run: npm test --no-watch --browsers=ChromeHeadless --code-coverage
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
